<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g2o_vendor</name>
  <version>1.0.0</version>
  <description>G2O 1.0 library integration</description>
  <maintainer email="markus.hofstaetter@ait.ac.at">Markus Hofstaetter</maintainer>
  <!-- all other should be free to use (g2o, suitsparse) -->
  <!-- this -->
  <license>MIT</license>
  <!-- other g2o, suitesparse modules modules -->
  <license>BSD</license>
  <!-- other g2o, suitesparse -->
  <license>LGPLv2.1</license>
  <!-- suitesparse, e.g. CHOLMOD -->
  <license>GPLv2</license>
  <!-- examples and apps of g2o (GPL3) -->
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <!-- public deps -->
  <!--TODO check which are build, runtime enad export deps-->
  <depend>eigen</depend>
  <depend>spdlog_vendor</depend>
  <depend>spdlog</depend>
  <depend>suitesparse</depend>
  <!-- g2o dep for non-source build or empty.
  -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
